--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,7 @@ jobs:
     
   - script: |
       conda activate myenv
+      pip install pytest pytest-azurepipelines
     displayName: Activate Anaconda environment on Windows
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
     
